--- a/src/includes/header.html
+++ b/src/includes/header.html
@@ -21,6 +21,8 @@
         <ul class="marker">
           <li><a href="#" class="nav_link">Женщинам</a></li>
           <li><a href="#" class="nav_link">Мужчинам</a></li>
+        </ul>
+        <ul class="marker">
           <li><a href="#" class="nav_link">Новинки</a></li>
           <li><a href="#" class="nav_link">Распродажа</a></li>
         </ul>
