--- a/src/sass/lib/_variables.scss
+++ b/src/sass/lib/_variables.scss
@@ -1,3 +1,4 @@
-@include font-face('PoiretOneRegular', "../fonts/PoiretOneRegular" ,null, null, ttf eot woff svg);
+//@include font-face('PoiretOneRegular', "../fonts/PoiretOneRegular" ,null, null, ttf eot woff svg);
+@include font-face('PoiretOneRegular', "../fonts/ComfortaaRegular" ,null, null, ttf eot woff svg);
 @include font-face('ComfortaaRegular', "../fonts/ComfortaaRegular" ,null, null, ttf eot woff svg);
 @include font-face('ComfortaaBold', "../fonts/ComfortaaBold" ,null, null, ttf eot woff svg);
