--- a/src/includes/header_inner.html
+++ b/src/includes/header_inner.html
@@ -18,8 +18,10 @@
     <div class="header_bottom">
       <div class="left_block">
         <ul class="marker">
-          <li><a href="#" class="nav_link current">Женщинам</a></li>
+          <li><a href="#" class="nav_link">Женщинам</a></li>
           <li><a href="#" class="nav_link">Мужчинам</a></li>
+        </ul>
+        <ul class="marker">
           <li><a href="#" class="nav_link">Новинки</a></li>
           <li><a href="#" class="nav_link">Распродажа</a></li>
         </ul>
