--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -124,7 +124,8 @@ textarea {
 
 p {
   font-size: 16px;
-  line-height: 19px;
+//  line-height: 19px;
+  line-height: 22px;
   margin: 10px 0;
   text-align: left;
 }
@@ -288,6 +289,7 @@ header{
     }
   }
   .marker{
+    display: inline-block;
     li{
       display: inline-block;
       margin-right: 30px;
@@ -356,7 +358,8 @@ header .wrap_small{
     a{
       color: #163e73;
       font-size: 16px;
-      line-height: 19px;
+//      line-height: 19px;
+      line-height: 22px;
       box-shadow: inset 0px -1px 0px 0px #163e73;
       transition: box-shadow 0.25s ease-out;
       &:hover,
@@ -632,7 +635,7 @@ main{
     left: 30px;
     z-index: 1;
     text-align: center;
-    width: 500px;
+    max-width: 500px;
     margin: 0 auto;
   }
   .title{
@@ -646,7 +649,9 @@ main{
     padding: 27px;
     border-radius: 5px;
     background-color: rgba(33, 54, 101, 0.5);
-    width: 430px;
+    max-width: 500px;
+    width: 100%;
+    min-width: 300px;
     margin: 234px 0 5px;
     transition: margin-top 0.25s ease-out, background-color 0.25s ease-out;
   }
@@ -812,6 +817,7 @@ main{
     }
   }
   .discount{
+    display: none;
     position: absolute;
     width: 58px;
     height: 58px;
@@ -881,6 +887,7 @@ main{
   height: 574px;
   video{
 	width: 100%;
+    height: 574px;
   }
 }
 
@@ -912,7 +919,7 @@ main{
   .item_product{
     width: 25%;
     .inner_product{
-      height: auto;
+      height: 100%;
     }
   }
 }
@@ -976,6 +983,7 @@ main{
     margin-left: -36px;
     font-size: 0;
     padding: 14.5px 0;
+    position: relative;
   }
   .col{
     padding: 0 15px;
@@ -987,7 +995,8 @@ main{
     letter-spacing: 0.01em;
     font-family: 'ComfortaaRegular', $font-stack-helvetica;
     display: inline-block;
-    margin-right: 30px;
+//    margin-right: 30px;
+    margin-right: 14px;
     margin-left: 30px;
     img{
       width: 20px;
@@ -996,10 +1005,21 @@ main{
       top: 4px;
     }
   }
+  .filters_field{
+    display: inline-block;
+    position: relative;
+  }
+  .filters_wrap{
+    display: inline-block;
+    background-color: #fff;
+    .btn_group{
+      display: none;
+    }
+  }
   .filter{
     color: #163e73;
     font-size: 18px;
-    letter-spacing: 0.01em;
+//    letter-spacing: 0.01em;
     display: inline-block;
     position: relative;
     .js-dropdown{
@@ -1007,7 +1027,8 @@ main{
       position: relative;
       background: url(../img/icons/svg/more.svg) right center no-repeat;
       background-size: 10px;
-      margin-right: 17px;
+//      margin-right: 17px;
+      margin-right: 14px;
       font-family: 'PoiretOneRegular', $font-stack-helvetica;
       &.active{
         color: #163e73;
@@ -1173,8 +1194,14 @@ main{
   float: right;
   position: relative;
   top: -4px;
+  .label{
+    display: none;
+  }
   .search{
     position: relative;
+    p{
+      display: none;
+    }
   }
   input{
     padding: 0 8px 0 30px;
@@ -1187,7 +1214,7 @@ main{
     background-size: 14px;
     cursor: pointer;
     position: absolute;
-    top: 0;
+    bottom: 0;
     left: 0;
     height: 30px;
     width: 30px;
@@ -1198,7 +1225,7 @@ main{
 /* breadcrumbs */
 
 .breadcrumbs{
-  padding: 52px 0 28px;
+  padding: 52px 0 20px;
   &.breadcrumbs_left{
     margin-left: 15px;
   }
@@ -1208,6 +1235,7 @@ main{
     letter-spacing: 0.01em;
     color: #333;
     margin-right: 48px;
+    margin-bottom: 8px;
     display: inline-block;
     font-family: 'PoiretOneRegular', $font-stack-helvetica;
   }
@@ -1251,6 +1279,10 @@ main{
 }
 
 /* select2 */
+
+.select2-container{
+  width: 66px!important;
+}
 
 .select2-container--default .select2-selection--single{
   border: none;
@@ -1352,7 +1384,8 @@ main{
     line-height: 32px;
     padding-top: 12px;
     .key{
-      font-family: 'ComfortaaRegular', $font-stack-helvetica;
+//      font-family: 'ComfortaaRegular', $font-stack-helvetica;
+      font-family: 'ComfortaaBold', $font-stack-helvetica;
     }
   }
   .size_frame{
@@ -1516,7 +1549,7 @@ main{
   li{
     border-bottom: 1px solid rgb(170, 170, 170);
     &:last-child{
-      border-bottom: none;
+      border: none;
     }
   }
   a{
