--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -802,6 +802,7 @@ main{
     box-shadow: 0px 1px 2px 0px rgba(22, 62, 115, 0.3);
     padding-bottom: 34px;
     display: inline-block;
+    width: 100%;
     height: 486px;
     transition: box-shadow 0.25s ease-out;
     &:hover,
